# Bubble-Gum

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
bbg/: main.cpp
bbg/inc/: bbg.hpp
control/: camera.hpp  movement.hpp  player.hpp
glad/include/glad/: glad.h
glad/src/: glad.c
mynet/: crypt.hpp  handler.hpp  peer.hpp  player.hpp  reactor.hpp  syncQueue.hpp  syncQueue_nonblocking.hpp
net/: main.cpp
net/inc/: net.hpp  netCommon.hpp  peer.hpp  player.hpp  reactor.hpp
net/src/: peer.cpp
opengl/: anim_vs.glsl  animation.hpp  animator.hpp  bone.hpp  camera.hpp  converter.hpp  keyframe.hpp  main.cpp  mesh.hpp  model.hpp  model_fs.glsl  model_vs.glsl  movement.hpp  shader.hpp
opengl/glsl/: anim_vs.glsl  modl_vs.glsl
physics/: collider.hpp  ground.hpp
resources/objects/monkey/: monkey.fbx
thr/: cachedThreadPool.hpp  syncQueue.hpp
